update to the new short page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Belt App</title>
-  <meta name="author" content="Belt">
-  <meta name="description" content="Belt App">
+    <title>RideAgent</title>
+  <meta name="author" content="MK">
+  <meta name="description" content="RideAgent App">
   <meta name="keywords" content="keywords,here">
 
 <link rel="shortcut icon" href="http://fs1.directupload.net/images/171121/373hdtyr.png" type="image/png" />
@@ -157,10 +157,10 @@ li a{
 
 
     <ul>
-      <li> <a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">Download</a></li>
-      <li><a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">IOS</a></li>
-      <li><a href="../Team.html">Android</a></li>
-      <li><a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">Contact</a></li>
+      <li><a href="https://itunes.apple.com/us/app/rideagent/id1302015845?mt=8">iOS</a></li>
+      <li><a href="https://www.linkedin.com/in/matt-klenk/">Developer</a></li>
+      <!-- <li><a href="../Team.html">Android</a></li> -->
+      <li><a href="mailto:mathias.j.klenk@gmail.com">Contact</a></li>
     </ul>
   </div>
   <div class="first-section-image cover animated fadeInRight">
@@ -175,14 +175,14 @@ li a{
 
 <p>
 
- Always ride for  <br /><span>  the lowest fare </span>
+ Find any ride cheaper <br /><span>  with RideAgent </span>
 </p>
 
-<a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">
+<a href="https://itunes.apple.com/us/app/rideagent/id1302015845?mt=8">
 <div class="batch-apple cover animated fadeInUp1 ">
 </div>
-<div class="batch-android cover animated fadeInUp1 ">
-</div>
+<!-- <div class="batch-android cover animated fadeInUp1 ">
+</div> -->
 </a>
 
 <div class="filler">
@@ -450,16 +450,16 @@ $('.scroller1').addClass('animated slideInUp fadeIn opacity');
 <style>
 .footer{
   background:#F8F8F8;
-  height: 800px;
+  height: 160px;
 }
-.footer-batches{
+/*.footer-batches{
   width:80%;
   max-width: 59%;
   height: 70px;
 }
 .footer-batches{
   display: flex;
-}
+}*/
 .batch{
   width: 189px;
   height: 60px;
@@ -510,28 +510,28 @@ color:#636363;
 }
 .footer-list{
   display: flex;
-  margin:110px 14vw 33px 14vw;
+  margin:0px 14vw 33px 14vw;
 }
 </style>
 
 
 <div class="footer">
 
-    <div class="footer-batches">
+    <!-- <div class="footer-batches">
 
       <a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">  <div class="batch cover"></div>      </a>
       <a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">  <div class="batch b-1 cover  "></div> </a>
       <a href="https://pagedemo.us13.list-manage.com/subscribe?u=896723690d5643c18b699bcda&id=2f7624c71d">  <div class="batch b-2 cover kill"></div> </a>
 
-    </div>
+    </div> -->
 
 
-<div class="footer-list">
+<!-- <div class="footer-list">
   <div class="footer-left">
     <ul>
       <li><span>COMPANY</span></li>
         <br />
-      <li> <a>Home</a></li>
+      <li> <a>About Us</a></li>
       <li><a>About us</a></li>
       <li><a>Support</a></li>
     </ul>
@@ -552,7 +552,7 @@ color:#636363;
     <ul>
       <li><span>Blog</span></li>
         <br />
-      <li> <a>Articles</a></li>
+      <li> <a>Blog</a></li>
       <li><a>News</a></li>
       <li><a>More</a></li>
     </ul>
@@ -571,7 +571,7 @@ color:#636363;
 
 
 
-</div>
+</div> -->
 
 
 <style>
@@ -579,6 +579,7 @@ color:#636363;
     width: 60%;
     height: 100px;
     float: left;
+    margin-top: 30px;
   }
 .footer-abspann-left span{
       font-weight: 300;
@@ -596,6 +597,7 @@ color:#636363;
     width: 40%;
     height: 100px;
     float: right;
+    margin-top: 30px;
   }
 .footer-abspann-right{
   color:#98A1A8;
@@ -608,7 +610,7 @@ color:#636363;
   margin-left: 82px;
 }
 .made-with-love{
-  margin-top:55px;
+  margin-top:0px;
   text-align: center;
   color: #DEE0E2;
 }
@@ -685,10 +687,10 @@ ul{
   width: 169.9px;
   height: 49.6px;
 }
-.footer-batches{
+/*.footer-batches{
 width: 100%;
 display:none;
-}
+}*/
 .batch{
   margin-top: 67px;
   margin: 2px;
@@ -740,8 +742,7 @@ body{
 <div class="footer-abspann-left">
   <div class="position">
     <span>
-      Belt is an fintech app which allows you to seamlessly make microinvestments into investor-backed portfolios of cryptoassets. We beleive that cryptoassets and the blockchain technology represent not only the next evolutionary step of the internet but also capitalism overall.
-    </span>
+      RideAgent compares the prices of all services from Uber & Lyft and redirects you their native App. Furthermore you can price listener, which notifies you about prices changes of surge pricing. Try it out and save money!</span>
   </div>
 
 </div>
@@ -749,7 +750,7 @@ body{
   <div class="position-2">
   <i class="fa fa-facebook" aria-hidden="true"></i>
   <i class="fa fa-medium" aria-hidden="true"></i>
-  <i class="fa fa-twitter" aria-hidden="true"></i>
+  <!-- <i class="fa fa-twitter" aria-hidden="true"></i> -->
   </div>
 </div>
 
@@ -760,7 +761,7 @@ body{
 <div class="made-with-love">
 
   <span>
-    Belt Technologies 2017. Made with in Munich.
+    RideAgent 2018. Made with love in San Francisco.
   </span>
 </div>
 
